# htybox_link

./: .gitignore  README.md
Document/: 01-双端方案总体设计.md  02-paseo参考详解.md  03-protocol-spec.md
crates/htybox-link/: Cargo.toml
crates/htybox-link/examples/: gen_vectors.rs
crates/htybox-link/src/: e2e.rs  frame.rs  handshake.rs  lib.rs  offer.rs  relay.rs  rpc.rs  terminal.rs
crates/htybox-link/tests/: e2e.rs  frame_roundtrip.rs  vectors.rs
crates/htybox-relay/: Cargo.toml
crates/htybox-relay/src/: lib.rs  main.rs
crates/htybox-relay/tests/: routing.rs
test-vectors/: e2e.json  frames.json
ts/: package.json  pnpm-lock.yaml  tsconfig.json
ts/scripts/: ws-smoke-connect.ts  ws-smoke-e2e.mjs  ws-smoke-multi.mjs  ws-smoke-relay.ts  ws-smoke-resize.ts  ws-smoke.mjs
ts/src/: b64.ts  backoff.ts  client.ts  connect.ts  e2e.ts  frames.ts  index.ts  messages.ts  offer.ts  transport-ws.ts
ts/test/: client.test.ts  connect.test.ts  e2e.test.ts  frames.test.ts  transport-ws.test.ts  vectors.test.ts
