[package]
name = "htybox-link"
version = "0.1.0"
edition = "2021"
description = "HtyBox 双端连接协议层：WS 分帧 / 握手 / 终端帧 / 配对 offer / E2E"
license = "MIT"

[dependencies]
base64 = "0.22.1"
crypto_box = { version = "0.9.1", features = ["salsa20", "getrandom"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
zeroize = "1.9.0"
